--- a/_config.yml
+++ b/_config.yml
@@ -114,9 +114,9 @@ analytics:
 # Site Author
 author:
   name             : "Grupo XX"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  location         : # "Somewhere"
   email            :
   links:
     - label: "Email"
