tentando preencher as tabs

--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "Grupo XX"
-  avatar           : "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/0000017.jpg"
   bio              : "I am an **amazing** person."
   location         : # "Somewhere"
   email            :
