--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Assignments"
     url: /assignments/
 
-  - title: "Project Phases"
-    url: /phases/
+  - title: "Project"
+    url: /project/
 
   - title: "Members"
     url: /members/   
