--- a/_config.yml
+++ b/_config.yml
@@ -20,15 +20,15 @@ rtl                      : # true, false (default) # turns direction of the page
 title                    : "  IPM - GRUPO XX"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Nome do Projeto"
-description              : "An amazing website."
+name                     : # "Nome do Projeto"
+description              : "Group XX's support website for the HCI (Human-Computer Interaction) course."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/assets/images/nova.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/nova.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+teaser                   : # "/assets/images/nova.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+logo                     : # "/assets/images/nova.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-breadcrumbs              : # true, false (default)
+breadcrumbs              : true #, false (default)
 words_per_minute         : 200
 enable_copy_code_button  : # true, false (default)
 copyright                : # "copyright" name, defaults to site.title
@@ -113,10 +113,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Grupo XX"
-  avatar           : "/assets/images/0000017.png"
-  bio              : "I am an **amazing** person."
-  location         : # "Somewhere"
+  name             : "*Nome da Aplicação*"
+  avatar           : "/assets/images/4.jpg"
+  bio              : "Group XX's support website for the HCI (Human-Computer Interaction) course."
+  location         : "NOVA FCT"
   email            :
   links:
     - label: "Email"
