--- a/_config.yml
+++ b/_config.yml
@@ -17,18 +17,18 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "  IPM - GRUPO XX"
+title                    : " GRUPO XX IPM"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : # "Nome do Projeto"
-description              : "Group XX's support website for the HCI (Human-Computer Interaction) course."
+description              : "Group XX's support website for the IPM (Interação Pessoa-Máquina) - HCI (Human-Computer Interaction) course."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # "/assets/images/nova.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # "/assets/images/nova.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-breadcrumbs              : true #, false (default)
+breadcrumbs              : # true, false (default)
 words_per_minute         : 200
 enable_copy_code_button  : # true, false (default)
 copyright                : # "copyright" name, defaults to site.title
