--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : " GRUPO XX IPM"
+title                    : " GROUP XX IPM"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : # "Nome do Projeto"
@@ -113,10 +113,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "*Nome da Aplicação*"
-  avatar           : "/assets/images/4.jpg"
-  bio              : "Group XX's support website for the HCI (Human-Computer Interaction) course."
-  location         : "NOVA FCT"
+  name             : #"*Nome da Aplicação*"
+  avatar           : #"/assets/images/4.jpg"
+  bio              : #"Group XX's support website for the HCI (Human-Computer Interaction) course."
+  location         : #"NOVA FCT"
   email            :
   links:
     - label: "Email"
