--- a/_config.yml
+++ b/_config.yml
@@ -113,10 +113,10 @@ analytics:
 
 # Site Author
 author:
-  name             : #"*Nome da Aplicação*"
-  avatar           : #"/assets/images/4.jpg"
-  bio              : #"Group XX's support website for the HCI (Human-Computer Interaction) course."
-  location         : #"NOVA FCT"
+  name             : "Bonus Stakeholders"
+  avatar           : "/assets/images/0000017.jpg"
+  bio              : "Group 5's support website for the HCI (Human-Computer Interaction) course."
+  location         : "NOVA FCT"
   email            :
   links:
     - label: "Email"
