--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "Bonus Stakeholders"
-  avatar           : "/assets/images/0000017.jpg"
+  avatar           : "/assets/images/0000017.png"
   bio              : "Group 5's support website for the HCI (Human-Computer Interaction) course."
   location         : "NOVA FCT"
   email            :
