--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,11 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : " GROUP XX IPM"
+title                    : " GROUP 5 IPM"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : # "Nome do Projeto"
-description              : "Group XX's support website for the IPM (Interação Pessoa-Máquina) - HCI (Human-Computer Interaction) course."
+description              : "Group 5 support website for the IPM (Interação Pessoa-Máquina) - HCI (Human-Computer Interaction) course."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
