--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-m
 teaser                   : "/assets/images/nova.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/nova.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-breadcrumbs              : # true, false (default)
+breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
 enable_copy_code_button  : # true, false (default)
 copyright                : # "copyright" name, defaults to site.title
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "Bonus Stakeholders"
   avatar           : "/assets/images/0000017.png"
-  bio              : "Group 5's support website for the HCI (Human-Computer Interaction) course."
+  bio              : "Group 5 support website for the HCI (Human-Computer Interaction) course."
   location         : "NOVA FCT"
   email            :
   links:
