--- a/_config.yml
+++ b/_config.yml
@@ -113,8 +113,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "Bonus Stakeholders"
-  avatar           : "/assets/images/0000017.png"
+  name             : "TASKABLE"
+  avatar           : "/assets/images/tasks.png"
   bio              : "Group 5 support website for the HCI (Human-Computer Interaction) course."
   location         : "NOVA FCT"
   email            :
